src/test/resources/invalid/invalidValue.sbsc
// nonexistent value reference should cause parser error

a = "bazinga";

println(a);

println(b); // b does not exist